erDiagram
    exercises {
        BIGINT id PK "Auto-increment"
        VARCHAR type "INTERVAL | SCALE | CHORD"
        INT difficulty "1-10 (CHECK constraint)"
        VARCHAR question "Schema JSON por tipo - ver ADR-013"
        VARCHAR correct_answer "Notas esperadas serializadas em JSON"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    sessions {
        BIGINT id PK "Auto-increment"
        TIMESTAMP start_time "Inicio da sessao"
        TIMESTAMP end_time "Fim da sessao - null se activa"
        INT total_exercises "DEFAULT 0"
        INT correct_answers "DEFAULT 0"
        INT incorrect_answers "DEFAULT 0"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    results {
        BIGINT id PK "Auto-increment"
        BIGINT session_id FK "ON DELETE CASCADE"
        BIGINT exercise_id FK "ON DELETE SET NULL"
        VARCHAR user_answer "Notas tocadas serializadas em JSON"
        BOOLEAN is_correct "Resultado da avaliacao"
        TIMESTAMP created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    sessions ||--o{ results : "contém"
    exercises ||--o{ results : "é respondido em"
